<resources>

    <string name="pref_language_key_arabic">arabic</string>

    <string name="pref_language_key_english">english</string>

    <string name="pref_references_key_reference">reference</string>

    <string name="pref_color_label_red">Red</string>
    <!-- Label for blue color preference -->
    <string name="pref_color_label_blue">Blue</string>
    <!-- Label for green color preference -->
    <string name="pref_color_label_green">Green</string>

    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_color_key" translatable="false">color</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>


    <string name="pref_size_label_small">Small</string>
    <!-- Label for blue color preference -->
    <string name="pref_size_label_normal">Normal</string>
    <!-- Label for green color preference -->
    <string name="pref_size_label_large">Large</string>

    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_size_key" translatable="false">size</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_size_small_value" translatable="false">small</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_size_normal_value" translatable="false">normal</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_size_large_value" translatable="false">large</string>

</resources>